# rust-web-server

./: Cargo.toml  README.md  docker-compose.yml
migrations/2021-04-18-202534_create_cats/: up.sql
src/: main.rs  models.rs
static/: add.html  index.html
static/css/: index.css
