[package]
name = "catdex"
version = "0.1.0"
authors = ["Santiago Bandiera <sagaban@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-web = "3.3.2"
serde_json = "1.0.53"
handlebars = { version = "3.0.1", features = ["dir_source"] }
serde = "1.0.110"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
r2d2 = "0.8.8"
